--- a/css/main.css
+++ b/css/main.css
@@ -96,3 +96,341 @@ img{
 .hero-item a:active{
     color: #212122;
 }
+
+/* GREAT CSS */
+.great{
+    padding-top: 48px;
+}
+.great-container{
+    background-image: url("../images/Bitmap.jpg");
+    background-repeat: no-repeat;
+    width: 1280px;
+    height: 600px;
+}
+
+.great-hero{
+    margin: 0;
+    padding: 0;
+}
+
+.great-hero-heading{
+    width: 611px;
+    height: 145px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 72px;
+    line-height: 72px;
+    color: #FEFCF7;
+    padding-left: 86px;
+    padding-top: 117px;
+}
+
+.great-hero-desc{
+    width: 445px;
+    height: 78px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FEFCF7;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    padding-top: 92px;
+    padding-left: 86px;
+}
+
+/* MAIN-BTN CSS */
+.main-btn{
+    width: 217px;
+    height: 56px;
+    background: #66D2CF;
+    border-radius: 6px;
+    margin-top: 122px;
+    margin-left: 86px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #FEFCF7;
+    border: none;
+}
+
+.main-btn:hover{
+    background: #55e6e1;
+   color: #fff;
+}
+
+.main-btn:active{
+    opacity: 0.6;
+}
+
+/* OUR CSS */
+
+.our{
+  margin-left: 199px;
+}
+
+.our-container{
+    display: flex;
+    background-image: url("../images/Group.png");
+    background-repeat: no-repeat;
+    width: 1270px;
+    height: 200px;
+    margin-top: 58px;
+}
+
+/* OUR-SECTION CSS */
+.our-section{
+    margin: 0;
+    padding: 0;
+}
+
+.our-list{
+    list-style: none;
+    display: flex;
+    padding-left: 4px;
+}
+
+.our-item{
+    position: relative;
+    top: 0px;
+    right: 60px;
+    margin-top: 116px;
+    margin-left:30px;
+}
+
+/* OUR-SERVICES */
+
+.our-services{
+    margin: 0;
+    padding: 0;
+}
+
+.services-list{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    list-style: none;
+    padding-left: 57px;
+}
+
+.services-item{
+    position: relative;
+    right: 68px;
+    top: 0;
+    width: 255px;
+    height: 78px;
+    margin-top: 142px;
+}
+
+.services-item + .services-item{
+    margin-left: 30px;
+}
+.services-item-span{
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    color: #333D4B;
+}
+
+.services-item-desc{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    color: #333D4B;
+}
+
+/* CHOOSE CSS */
+
+.choose-container{
+    background-color:#282F38;
+    margin-top: 288px;
+    width: 1280px;
+    height: 577px;
+}
+.choose-us{
+    margin: 0;
+    padding: 0;
+}
+
+.choose-us-heading{
+    width: 352px;
+    height: 48px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 48px;
+    color: #FEFCF7;
+    padding-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.choose-us-paragraph{
+    width: 540px;
+    height: 80px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    color: #FEFCF7;
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    padding-top: 32px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* CHOOSE LIST CSS */
+
+.choose-list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+}
+
+.choose-item{
+    width: 350px;
+    height: 382px;
+    background: #0E8784;
+    border-radius: 8px;
+    margin-left: auto;
+    margin-right: 42px;
+    margin-top:86px;
+}
+
+.choose-item::before{
+    content: '';
+    display: block;
+    background-image: url("../images/coffee-bean.png");
+    background-repeat: no-repeat;
+    width:72px;
+    height: 72px;
+    margin-top: 72px;
+    margin-left: 140px;
+}
+
+.item::before{
+    content: '';
+    display: block;
+    background-image: url("../images/Combined-Shape.png");
+    background-repeat: no-repeat;
+    width:72px;
+    height: 72px;
+    margin-top: 72px;
+    margin-left: 140px;
+}
+
+.etim::before{
+    content: '';
+    display: block;
+    background-image: url("../images/Combined-Shape1.png");
+    background-repeat: no-repeat;
+    width:72px;
+    height: 72px;
+    margin-top: 72px;
+    margin-left: 140px;
+}
+.choose-item-span{
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    height: 32px;
+    position: relative;
+    bottom: 164px;
+    left: 0;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 32px;
+    color: #FEFCF7;
+    padding-left: 47px;
+    margin-top: 220px;
+}
+
+.choose-item-desc{
+    position: relative;
+    bottom: 152px;
+    width: 300px;
+    height: 78px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    text-align: center;
+    line-height: 26px;
+    color: #FEFCF7;
+    padding-left: 47px;
+}
+
+/* SITE WORKS CSS */
+
+.works-top{
+    margin: 0;
+    padding: 0;
+    margin-top: 320px;
+    margin-left: 74px;
+}
+
+.wors-top-desc{
+    width: 255px;
+    height: 32px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 32px;
+    color: #83888F;
+}
+
+.works-top-img{
+  margin-top: 104px;
+}
+/* SITE WORKS-LIST */
+
+.works-top-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin-right: 315px;
+    margin-top: 67px;
+}
+
+.works-top-list-item{
+    padding-left:95px;
+}
+
+.works-top-list-item-heading{
+    width: 227px;
+    height: 73px;
+    font-style: normal;
+    font-weight:900;
+    font-size: 32px;
+    line-height: 36px;
+    color: #333D4B;
+    margin-top:38px;
+}
+
+.works-top-list-item-desc{
+    width: 285px;
+    height: 130px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+    color: #333D4B;
+    margin-top: 42px;
+}
+
+.button{
+   position: relative;
+   bottom:98px;
+   right: 94px;
+   border: none;
+}
