--- a/css/main.css
+++ b/css/main.css
@@ -434,3 +434,78 @@ img{
    right: 94px;
    border: none;
 }
+
+/* SITE FOOTER CSS */
+
+.footer{
+    background-color: #2C343E;
+    height: 120px;
+}
+
+.footer-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 200px;
+    padding-top: 42px;
+}
+
+.footer-bottom-left-link{
+    text-decoration: none;
+}
+
+.footer-bottom-left-link:hover{
+    opacity: 0.8;
+}
+.footer-bottom-list{
+    display: flex;
+    list-style: none;
+    margin-right: 200px;
+}
+
+.footer-bottom-item{
+    width: 141px;
+    height: 15px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.923077px;
+    text-transform: uppercase;
+}
+.footer-bottom-item a{
+    color: #83888F;
+    text-decoration: none;
+}
+
+.footer-bottom-item a:hover{
+     color: #fff;
+}
+
+.footer-bottom-right-list{
+    display: flex;
+    list-style: none;
+    margin-right: 141px;
+}
+
+.footer-bottom-right-list-item{
+    width: 24px;
+    height: 24px;
+    margin-left: 15px;
+    text-align: center;
+}
+
+.footer-bottom-right-list-item a{
+    color: #FEFCF7;
+    text-decoration: none;
+}
+
+.footer-bottom-right-list-item a:hover{
+    color: #FDD6BA;
+}
+
+.fa{
+    margin-right: 12px;
+    width: 24px;
+    height: 24px;
+}
