--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
 /* GENERAL CSS */
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces&family=Mochiy+Pop+P+One&display=swap');
-
 *,
 *::after,
 *::before{
@@ -8,14 +6,24 @@
 }
 
 body{
-    font-family: 'Barlow', sans-serif;
     margin: 0;
     padding: 0;
     margin-top: 96px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+html{
+    height: 100%;
 }
 
 img{
     display: inline-block;
+}
+
+main{
+    flex-grow: 1;
 }
 
 .container{
@@ -102,7 +110,7 @@ img{
     padding-top: 48px;
 }
 .great-container{
-    background-image: url("../images/Bitmap.jpg");
+    background-image: url("../images/Bitmap1.jpg");
     background-repeat: no-repeat;
     width: 1280px;
     height: 600px;
@@ -439,15 +447,12 @@ img{
 
 .footer{
     background-color: #2C343E;
-    height: 120px;
 }
 
 .footer-bottom{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 200px;
-    padding-top: 42px;
 }
 
 .footer-bottom-left-link{
@@ -506,6 +511,5 @@ img{
 
 .fa{
     margin-right: 12px;
-    width: 24px;
-    height: 24px;
+    font-size: 24px;
 }
