--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,16 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 /* GENERAL CSS */
 *,
 *::after,
 *::before{
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 body{
@@ -10,8 +18,13 @@ body{
     padding: 0;
     margin-top: 96px;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 html{
@@ -23,7 +36,9 @@ img{
 }
 
 main{
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
 }
 
 .container{
@@ -34,7 +49,8 @@ main{
 
 .visually-hidden {
     clip: rect(0 0 0 0);
-    clip-path: inset(50%);
+    -webkit-clip-path: inset(50%);
+            clip-path: inset(50%);
     height: 1px;
     overflow: hidden;
     position: absolute;
@@ -52,9 +68,13 @@ main{
     z-index: 1;
 }
 .nav{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    margin-top:44px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 45px;
 }
 
 .hero{
@@ -78,6 +98,8 @@ main{
 }
 
 .hero-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
 }
@@ -106,9 +128,6 @@ main{
 }
 
 /* GREAT CSS */
-.great{
-    padding-top: 48px;
-}
 .great-container{
     background-image: url("../images/Bitmapa.jpg");
     background-repeat: no-repeat;
@@ -180,6 +199,8 @@ main{
 }
 
 .our-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background-image: url("../images/Group.png");
     background-repeat: no-repeat;
@@ -196,6 +217,8 @@ main{
 
 .our-list{
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding-left: 4px;
 }
@@ -216,8 +239,12 @@ main{
 }
 
 .services-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
     list-style: none;
     padding-left: 57px;
@@ -298,9 +325,15 @@ main{
 /* CHOOSE LIST CSS */
 
 .choose-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     list-style: none;
 }
 
@@ -347,8 +380,12 @@ main{
     margin-left: 140px;
 }
 .choose-item-span{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 300px;
     height: 32px;
     position: relative;
@@ -402,9 +439,15 @@ main{
 /* SITE WORKS-LIST */
 
 .works-top-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     list-style: none;
     margin-right: 315px;
     margin-top: 67px;
@@ -450,9 +493,15 @@ main{
 }
 
 .footer-bottom{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .footer-bottom-left-link{
@@ -463,6 +512,8 @@ main{
     opacity: 0.8;
 }
 .footer-bottom-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
     margin-right: 200px;
@@ -488,6 +539,8 @@ main{
 }
 
 .footer-bottom-right-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
     margin-right: 141px;
@@ -553,8 +606,12 @@ main{
 /* SITE OUR CSS */
 
 .our_commitment{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 168px 0;
 }
 .our-text{
@@ -658,8 +715,12 @@ main{
 }
 
 .siteour-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     list-style: none;
     padding-left: 0;
     padding-top: 72px;
@@ -695,9 +756,15 @@ main{
 }
 
 .footer-bottom{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .footer-bottom-left-link{
@@ -708,6 +775,8 @@ main{
     opacity: 0.8;
 }
 .footer-bottom-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
     margin-right: 200px;
@@ -733,6 +802,8 @@ main{
 }
 
 .footer-bottom-right-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
     margin-right: 141px;
